--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
         <div class="Boton-IncluidoContainer">
             <div class="d-grid gap-2 col-6 mx-auto">
                 <a href="/MantenedorIncluidos/Listar" class="btn btn-warning btn-lg">Incluidos</a>
-                <a href="/MantenedorExcluidos/Listar" class="btn btn-success btn-lg" style="color:black;">Excluidos</a>
+                @*<a href="/MantenedorExcluidos/Listar" class="btn btn-success btn-lg" style="color:black;">Excluidos</a>*@
             </div>
         </div>
     </div>
