--- a/Views/MantenedorIncluidos/Listar.cshtml
+++ b/Views/MantenedorIncluidos/Listar.cshtml
@@ -45,6 +45,9 @@
         <div class="col-auto" style="position: relative; top: 8px;">
             <a class="btn btn-warning mb-3" asp-controller="MantenedorIncluidos" asp-action="Guardar">Insertar nuevo registro</a>
         </div>
+        <div class="col-auto" style="position: relative; top: 8px;">
+            <a class="btn btn-info mb-3" href="/MantenedorIncluidos/EditarFecha">Editar Fechas</a>
+        </div>
     </form>
     <div class="col-auto">
         <a class="btn btn-success" href="/SubirArchivo/listar" style="margin:15px">Subir Archivo .txt</a>
