--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,9 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MantenedorIncluidos" asp-action="Listar">Incluidos</a>
                         </li>
-                        <li class="nav-item">
+                       @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MantenedorExcluidos" asp-action="Listar">Excluidos</a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
