--- a/Views/SubirArchivo/listar.cshtml
+++ b/Views/SubirArchivo/listar.cshtml
@@ -25,7 +25,7 @@
 
             </div>
             <div class="card-footer d-flex justify-content-start">
-                <button type="submit" class="btn btn-success">Enviar</button>
+                <button type="submit" class="btn btn-success" href="/SubirArchivo/GuardarRegistros">Enviar</button>
                 <a class="btn btn-warning" href="/MantenedorIncluidos/Listar">Volver</a>
             </div>
         </form>
@@ -82,9 +82,7 @@
 
     </div>
 
-    <div class="card-footer d-flex justify-content-end">
-        <button class=" btn btn-warning" onclick="sendTable()"> Guardar Registros </button>
-    </div>
+    
     
 }
 
